# proper-weather

./: .gitignore  CHANGELOG.md  HotExe.sh  HotLib.sh  README.md  README.org  default.nix  nixpkgs.nix  overlay.nix  release.nix  shell.nix  xmobar-proper-weather.cabal
app/: .dir-locals.el  Main.hs
nix/: sources.json
src/: Prelude.hs
src/XMobar/Plugins/: ProperWeather.hs
src/XMobar/Plugins/ProperWeather/: Coords.hs  Error.hs  OpenWeatherMap.hs
src/XMobar/Plugins/ProperWeather/OpenWeatherMap/: Weather.hs
