cabal-version:       2.2
name:                xmobar-proper-weather
version:             1.0.1
synopsis:            Proper weather information
description:         Generate and get proper weather info. 
author:              Ashesh Ambasta
maintainer:          ashesh@asheshambasta.com

common common-extensions
  default-extensions:
    DeriveGeneric
    DerivingVia 
    FlexibleContexts
    FlexibleInstances
    GADTs
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PackageImports
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns
  default-language: Haskell2010

common common-ghc-options
  ghc-options:
    -Wall
    -fno-warn-missing-signatures

common common-build-depends
   build-depends:       
    base-noprelude 
    , xmobar  
    , protolude 
    , http-conduit 
    , text 
    , aeson 

library 

  import: common-extensions
        , common-ghc-options 
        , common-build-depends

  other-modules:
    XMobar.Plugins.ProperWeather.Coords
    XMobar.Plugins.ProperWeather.Error
    XMobar.Plugins.ProperWeather.OpenWeatherMap.Weather

  exposed-modules:
    Prelude 
    XMobar.Plugins.ProperWeather
    XMobar.Plugins.ProperWeather.OpenWeatherMap
  hs-source-dirs:
    src 

executable proper-weather   

  import: common-extensions
        , common-build-depends 

  build-depends: 
      optparse-applicative 
    , xmobar-proper-weather

  other-modules:
    Paths_xmobar_proper_weather

  main-is: Main.hs 

  hs-source-dirs: 
    app 

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -fwarn-incomplete-patterns
    -Wall
    -Wunused-imports
    -Wno-partial-type-signatures
    -O2
